[gd_scene load_steps=8 format=3 uid="uid://b3qmoechdtco3"]

[ext_resource type="Texture2D" uid="uid://0e5alcgidubf" path="res://assets/misc/npc_base.png" id="1_ktfjk"]
[ext_resource type="Script" uid="uid://dg3puw2qnjfl1" path="res://scripts/customer.gd" id="1_xss0h"]
[ext_resource type="PackedScene" uid="uid://len0r378bqub" path="res://scenes/objects/table.tscn" id="2_846g6"]
[ext_resource type="Texture2D" uid="uid://b4ir0kyq24njt" path="res://assets/misc/want_spaghet.png" id="3_8qg4y"]
[ext_resource type="Script" uid="uid://baevt53cjp37c" path="res://scripts/speech_bubble.gd" id="4_rjbu2"]
[ext_resource type="Texture2D" uid="uid://55eywky3ljkk" path="res://assets/misc/progress_bar.png" id="5_qqxhk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8qg4y"]
size = Vector2(23, 27)

[node name="customer" type="Node2D"]
script = ExtResource("1_xss0h")

[node name="Area2D" parent="." instance=ExtResource("2_846g6")]

[node name="customer_look" type="Sprite2D" parent="."]
texture = ExtResource("1_ktfjk")

[node name="foodArea" type="Area2D" parent="."]
collision_layer = 2

[node name="food_collider" type="CollisionShape2D" parent="foodArea"]
position = Vector2(-1.5, -9.5)
shape = SubResource("RectangleShape2D_8qg4y")

[node name="orderTimer" type="Timer" parent="."]

[node name="orderBubble" type="Sprite2D" parent="."]
position = Vector2(19, -44)
texture = ExtResource("3_8qg4y")
script = ExtResource("4_rjbu2")

[node name="orderProgressBar" type="TextureProgressBar" parent="."]
visible = false
offset_left = -32.0
offset_top = -64.0
offset_right = 96.0
offset_bottom = -24.0
scale = Vector2(0.507155, 0.723984)
value = 100.0
texture_progress = ExtResource("5_qqxhk")

[connection signal="body_entered" from="foodArea" to="." method="_on_food_area_body_entered"]
[connection signal="body_exited" from="foodArea" to="." method="_on_food_area_body_exited"]
